fix to some alignment

--- a/app/assets/stylesheets/auctions.scss
+++ b/app/assets/stylesheets/auctions.scss
@@ -367,6 +367,9 @@ li.auc_show
   width: 30%;
   border-radius: 10px;
 }
+.panel-center {
+  text-align: center;
+}
 button.top-cta-button.btn-user-auc.back-btn
 {
   width: 10rem;
